--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -315,6 +315,7 @@
     width:25%;
     box-sizing: border-box;
     padding: 0 1%;
+    float:left;
   }
   .views-slideshow-controls-text-previous {
     display: block;
