--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1604,4 +1604,7 @@ ul#superfish-1 li ul {
 #block-system-main .view-cast-crew .views-row-197 {
   clear: left; }
 
+.context-filmrecruitzz .zone-postscript-wrapper {
+  padding: 30px 0; }
+
 /*# sourceMappingURL=global.css.map */
