--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -361,4 +361,7 @@
 #block-system-main .view-cast-crew .views-row-197 {
   clear: left; }
 
+#block-search-form h2.element-invisible {
+  display: none; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
