--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -362,6 +362,6 @@
   clear: left; }
 
 #block-search-form h2.element-invisible {
-  display: none; }
+  display: none !important; }
 
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
