--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -361,7 +361,7 @@
 #block-system-main .view-cast-crew .views-row-197 {
   clear: left; }
 
-#block-search-form h2.element-invisible {
+.element-invisible {
   display: none !important; }
 
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
