--- a/sites/all/themes/default/css/default-alpha-default-normal.scss
+++ b/sites/all/themes/default/css/default-alpha-default-normal.scss
@@ -308,10 +308,12 @@
     }
   }
 }
-
-  .element-invisible {
+#search-block-form{
+  h2.element-invisible {
     display:none!important;
   }
+}
+
 
 
 
