--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1609,4 +1609,7 @@ ul#superfish-1 li ul {
 .context-filmrecruitzz .zone-postscript-wrapper {
   padding: 30px 0; }
 
+#search-block-form h2.element-invisible {
+  display: none !important; }
+
 /*# sourceMappingURL=global.css.map */
