--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1730,3 +1730,9 @@ ul#superfish-1 li {
     padding:30px 0;
   }
 }
+
+#search-block-form{
+  h2.element-invisible {
+    display:none!important;
+  }
+}
